Finish up layout.css On to theme.css and redoing iconPositions.

--- a/src/General/css/dynamic.css
+++ b/src/General/css/dynamic.css
@@ -1,7 +1,9 @@
 #boardNavDesktopFoot a,
 #header-bar a,
 .deleteform::before,
+.field,
 .hide-navigation-decorations .pages a,
+.selectrice,
 body,
 button,
 input,
