--- a/src/General/css/dynamic.css
+++ b/src/General/css/dynamic.css
@@ -37,6 +37,9 @@ body {
 .thread > .threadContainer:last-of-type {
   margin-bottom: -#{Conf["Post Spacing"]}px;
 }
+.thread > .replyContainer > .reply.post {
+  border-width: #{if _conf['Post Spacing'] is "0" then "1px 1px 0 1px" else '1px'};
+}
 .postMessage {
   margin: #{_conf['Vertical Post Padding']}px #{_conf['Horizontal Post Padding']}px;
 }
